--- a/testfile.ipynb
+++ b/testfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ba589f19-0735-465c-821e-5694fc589e95",
    "metadata": {},
    "outputs": [
@@ -11,13 +11,15 @@
      "output_type": "stream",
      "text": [
       "[1] \"Hello World\"\n",
-      "[1] \"Your Name\"\n"
+      "[1] \"Your Name\"\n",
+      "[1] \"DSCI 100\"\n"
      ]
     }
    ],
    "source": [
     "print(\"Hello World\")\n",
-    "print('Your Name')"
+    "print('Your Name')\n",
+    "print('DSCI 100')"
    ]
   },
   {
